Fixed a wrong color code

--- a/src/assets/sass/technovert/_colors.scss
+++ b/src/assets/sass/technovert/_colors.scss
@@ -1,4 +1,4 @@
-$blue: #1077da !default;
+$blue: #1077da;
 $blue-100: #dbebfa;
 
 $green: #63c572;
